<?xml version="1.0"?>
<package format="2">
  <name>PKG_NAME</name>
  <version>0.1.0</version>
  <description>PKG_NAME</description>

  <maintainer email="MY_EMAIL">MY_NAME</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/MY_GITHUB/PKG_NAME</url>

  <buildtool_depend>catkin</buildtool_depend>
DEPENDENCIES

  <export>
  </export>
</package>
